# Gena

./: .gitignore  data-generator.cabal
src/: CommandLine.hs  GeneratorUtils.hs  Generators.hs  Main.hs  Output.hs  PersonalityGenerators.hs  PhoneGenerators.hs  PhoneOutput.hs
